k8s/kafka/kafdrop/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafdrop
  template:
    metadata:
      labels:
        app: kafdrop
    spec:
      containers:
        - name: kafdrop
          image: obsidiandynamics/kafdrop:4.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
      restartPolicy: Always
