k8s/kafka/kafdrop/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafdrop
spec:
  selector:
    app: kafdrop
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: http-kafdrop
  type: NodePort
