k8s/kafka/kafdrop/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafdrop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: all-in-service.kafdrop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafdrop
                port:
                  name: http-kafdrop
